--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,9 @@
 /* 새 css class */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 .center {
-  display: block;
-  margin: auto;
+  display: inline-block;
+  margin-right: 10px;
 }
